--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.0.6",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.5",
     "primevue": "^3.37.0",
