--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@floating-ui/vue": "^1.0.6",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.5",
