--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primeicons": "^6.0.1",
     "primereact": "^10.0.5",
     "primevue": "^3.37.0",
+    "tailwindcss": "^3.4.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
